Modificacion del html,css y img

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
                 <div>
                     <textarea name="" id="text-info" placeholder="Ingrese el texto aqui"></textarea>
                 </div>
+                <div style="display: flex; align-items: center;">
+                    <picture >
+                        <img src="img\icon.png" alt="img-icon">
+                    </picture>
+                    <p style="margin-left: 20px; color: #495057;">Solo letras minúsculas y sin acentos</p>
+                </div>
                 <div id="buttons">
                     <button type="button" id="button-Encrypt">Encriptar</button>
                     <button type="button" id="button-Decrypt">Desencriptar</button>
